# TasksNowSimple

./: .gitignore  CMakeLists.txt  README.md  TasksNowSimple.cpp  TasksNowSimple.sln  TasksNowSimple.vcxproj  TasksNowSimple.vcxproj.filters  task.txt
storage/: Storage.cpp  Storage.h
task/: Task.cpp  Task.h
